linket til de rigtige mapper efter omstrukturering

--- a/html/game-3.html
+++ b/html/game-3.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
     <title>Sortér Fiskene</title>
-    <link rel="stylesheet" href="game-3.css" />
+    <link rel="stylesheet" href="../css/game-3.css" />
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
@@ -67,6 +67,6 @@
       </div>
     </div>
 
-    <script src="game-3.js"></script>
+    <script src="../js/game-3.js"></script>
   </body>
 </html>
