--- a/html/game-2.html
+++ b/html/game-2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Akvarie Spil for Børn</title>
-    <link rel="stylesheet" href="game-2.css" />
+    <link rel="stylesheet" href="../css/game-2.css" />
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
@@ -67,6 +67,6 @@
       <button id="restartButton">Spil igen</button>
     </div>
 
-    <script src="game-2.js"></script>
+    <script src="../js/game-2.js"></script>
   </body>
 </html>
