--- a/html/game.html
+++ b/html/game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Akvarie Eventyr</title>
-    <link rel="stylesheet" href="game-style.css" />
+    <link rel="stylesheet" href="../css/game-style.css" />
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
@@ -42,6 +42,6 @@
       <div id="gameArea"></div>
     </div>
 
-    <script src="game-script.js"></script>
+    <script src="../js/game-script.js"></script>
   </body>
 </html>
