Tilføjet H1 tag for søgeoptimering og tilgængelighed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <!--Tilføjet H1 for tilgængelighed og søgeoptimering-->
+    <h1>Akvarie Touchskærm - Storcenter Nord</h1>
     <!-- Intro skærm med Nemo -->
     <aside id="nemoIntro" class="nemo-intro">
       <img src="img/talknemofish.gif" alt="Nemo taler" class="nemo-intro-gif" />
@@ -63,7 +65,6 @@
         </div>
       </nav>
     </header>
-
 
     <audio id="medi-backgroundMusic" loop>
       <source src="audio/chillax.mp3" type="audio/mp3" />
