tilføjet svg'er samt ændret musopen og luk til at fungere med nye svg

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
       <section class="shell">
         <figure id="shelly">
-          <img src="img/musLuk.png" alt="sea shell" id="seashell-closed" />
+          <img src="img/mus.svg" alt="sea shell" id="seashell-closed" />
         </figure>
       </section>
     </main>
