--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <section class="treasure">
         <figure id="chest">
           <img src="img/kiste.png" alt="treasure chest" id="treasure-chest" />
-          <img src="img/tang1.png" alt="seaweed" id="seaweed" />
+          <img src="img/tang.svg" alt="seaweed" id="seaweed" />
         </figure>
       </section>
 
