slettet de sidste png'er

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
       <section class="treasure">
         <figure id="chest">
-          <img src="img/kiste.png" alt="treasure chest" id="treasure-chest" />
+          <img src="img/kiste.svg" alt="treasure chest" id="treasure-chest" />
           <img src="img/tang.svg" alt="seaweed" id="seaweed" />
         </figure>
       </section>
