tilføjet optimeret orangefisk samt givet dem nogen mere sigende id'er samt class

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 
         <figure id="orange-fish">
           <img
-            src="img/OrangefishDONE.gif"
+            src="img/orangeFisk.gif"
             alt="orange fish"
-            id="ogfish"
-            class="orangy"
+            id="orange"
+            class="orangeFish"
           />
         </figure>
 
@@ -152,10 +152,10 @@
 
         <figure id="orange-fish2">
           <img
-            src="img/OrangefishDONE.gif"
+            src="img/orangeFisk.gif"
             alt="orange fish"
-            id="ogfish2"
-            class="orangy"
+            id="orange2"
+            class="orangeFish"
           />
         </figure>
 
@@ -208,10 +208,10 @@
 
         <figure id="orange-fish3">
           <img
-            src="img/OrangefishDONE.gif"
+            src="img/orangeFisk.gif"
             alt="orange fish"
-            id="ogfish3"
-            class="orangy"
+            id="orange3"
+            class="orangeFish"
           />
         </figure>
       </section>
