optimeret maskot gif indsat

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Akvarie Touchskærm - Storcenter Nord</h1>
     <!-- Intro skærm med Nemo -->
     <aside id="nemoIntro" class="nemo-intro">
-      <img src="img/talknemofish.gif" alt="Nemo taler" class="nemo-intro-gif" />
+      <img src="img/nemo-talk.gif" alt="Nemo taler" class="nemo-intro-gif" />
       <p class="intro-speech-bubble">Klik på mig!</p>
     </aside>
 
