tilføjet optimeret søhest samt fjernet gamle gif der ikke er i brug længere

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <figure id="horsea">
           <img
-            src="img/seahorsefish.gif"
+            src="img/sohest.gif"
             alt="seahorse"
             id="seahorse"
             class="thereHorse"
@@ -161,7 +161,7 @@
 
         <figure id="horsea2">
           <img
-            src="img/seahorsefish.gif"
+            src="img/sohest.gif"
             alt="seahorse"
             id="seahorse2"
             class="thereHorse righty"
@@ -199,7 +199,7 @@
 
         <figure id="horsea3">
           <img
-            src="img/seahorsefish.gif"
+            src="img/sohest.gif"
             alt="seahorse"
             id="seahorse3"
             class="thereHorse"
