tilføjet lille puffer fisk

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <section id="fish">
         <figure id="pufferfish">
           <img
-            src="img/flat-pufferfish-swim.gif"
+            src="img/pufferFiskLille.gif"
             alt="pufferfish"
             id="puffish"
             class="pufpuf"
@@ -125,7 +125,7 @@
       <section id="fish2">
         <figure id="pufferfish2">
           <img
-            src="img/flat-pufferfish-swim.gif"
+            src="img/pufferFiskLille.gif"
             alt="pufferfish"
             id="puffish2"
             class="pufpuf"
@@ -172,7 +172,7 @@
       <section id="fish3">
         <figure id="pufferfish3">
           <img
-            src="img/flat-pufferfish-swim.gif"
+            src="img/pufferFiskLille.gif"
             alt="pufferfish"
             id="puffish3"
             class="pufpuf"
