optimering af damselfisk samt tuxedo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <figure id="tuxedo">
           <img
-            src="img/tuxedo-fish.gif"
+            src="img/damselFiskTuxedo.gif"
             alt="tuxedo damsel fish"
             id="tuxfish"
             class="tuxie"
@@ -134,7 +134,7 @@
 
         <figure id="tuxedo2">
           <img
-            src="img/tuxedo-fish.gif"
+            src="img/damselFiskTuxedo.gif"
             alt="tuxedo damsel fish"
             id="tuxfish2"
             class="tuxie"
@@ -181,7 +181,7 @@
 
         <figure id="tuxedo3">
           <img
-            src="img/tuxedo-fish.gif"
+            src="img/damselFiskTuxedo.gif"
             alt="tuxedo damsel fish"
             id="tuxfish3"
             class="tuxie"
