tilføjet optimeret blå fisk

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <figure id="blue-pink">
           <img
-            src="img/BluefishDONE.gif"
+            src="img/blaaFisk.gif"
             alt="blue and pink fish"
             id="bpfish"
             class="diskus"
@@ -143,7 +143,7 @@
 
         <figure id="blue-pink2">
           <img
-            src="img/BluefishDONE.gif"
+            src="img/blaaFisk.gif"
             alt="blue and pink fish"
             id="bpfish2"
             class="diskus lefty"
@@ -190,7 +190,7 @@
 
         <figure id="blue-pink3">
           <img
-            src="img/BluefishDONE.gif"
+            src="img/blaaFisk.gif"
             alt="blue and pink fish"
             id="bpfish3"
             class="diskus"
