ænddrt skrald til vector grafik

--- a/html/game-2.html
+++ b/html/game-2.html
@@ -42,7 +42,7 @@
         <div id="score">Score: <span id="points">0</span></div>
         <div id="dodger"></div>
         <div id="coin">
-          <img src="../img/skrald.png" alt="mad">
+          <img src="../img/skrald.svg" alt="skrald" />
         </div>
         <div class="structure" id="wall1"></div>
         <div class="structure" id="wall2"></div>
