tilføjet optimeret scubamand ivector grafik

--- a/html/game-2.html
+++ b/html/game-2.html
@@ -52,7 +52,7 @@
       <!-- Info boks til kontroller -->
       <div class="controls-info">
         <p>Brug piletasterne for at styre dykkeren</p>
-        <p>Pas på korallerne og saml skraldet op fra havet af!</p>
+        <p>Pas på tanget og saml skraldet op fra havet af!</p>
       </div>
     </div>
 
