gjort det tydeligt spil 3 ikke bliver optimeret

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
               <article class="game-card">
                 <a href="html/game-3.html">
                   <figure class="card-image">
-                    <img src="img/game3.png" alt="Spil 3" />
+                    <img src="img/niks.jpg" alt="Spil 3" />
                   </figure>
-                  <h2>Sortér Fiskene</h2>
+                  <h2>Ikke optimeret spil</h2>
                 </a>
               </article>
             </nav>
