ændret så alle billeder er i camelcase

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Akvarie Touchskærm - Storcenter Nord</h1>
     <!-- Intro skærm med Nemo -->
     <aside id="nemoIntro" class="nemo-intro">
-      <img src="img/nemo-talk.gif" alt="Nemo taler" class="nemo-intro-gif" />
+      <img src="img/nemoTalk.gif" alt="Nemo taler" class="nemo-intro-gif" />
       <p class="intro-speech-bubble">Klik på mig!</p>
     </aside>
 
@@ -26,7 +26,7 @@
             <div class="mascot-section">
               <p class="speech-bubble">Vælg et spil!</p>
               <img
-                src="img/Nemo-fish.png"
+                src="img/nemoFish.png"
                 alt="Maskot fisk"
                 class="mascot-fish"
                 id="menuMascot"
