sat fokus på hvilket spil jeg optimere

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
               <article class="game-card">
                 <a href="html/game.html">
                   <figure class="card-image">
-                    <img src="img/game1.png" alt="Spil 1" />
+                    <img src="img/niks.jpg" alt="Spil 1" />
                   </figure>
-                  <h2>Akvarie Eventyr</h2>
+                  <h2>Ikke optimeret spil</h2>
                 </a>
               </article>
 
