endelig opdateret alle billeder til kebab-case

--- a/html/game-2.html
+++ b/html/game-2.html
@@ -22,7 +22,7 @@
 
       <figure class="mascot-intro">
         <img
-          src="../img/nemoFish.png"
+          src="../img/nemo-fish.png"
           alt="Nemo maskot"
           class="intro-mascot"
           id="startMascot"
