--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Akvarie Touchskærm - Storcenter Nord</h1>
     <!-- Intro skærm med Nemo -->
     <aside id="nemoIntro" class="nemo-intro">
-      <img src="img/nemoTalk.gif" alt="Nemo taler" class="nemo-intro-gif" />
+      <img src="img/nemo-talk.gif" alt="Nemo taler" class="nemo-intro-gif" />
       <p class="intro-speech-bubble">Klik på mig!</p>
     </aside>
 
@@ -26,7 +26,7 @@
             <div class="mascot-section">
               <p class="speech-bubble">Vælg et spil!</p>
               <img
-                src="img/nemoFish.png"
+                src="img/nemo-fish.png"
                 alt="Maskot fisk"
                 class="mascot-fish"
                 id="menuMascot"
@@ -78,7 +78,7 @@
       <section id="fish">
         <figure id="pufferfish">
           <img
-            src="img/pufferFiskLille.gif"
+            src="img/puffer-fisk-lille.gif"
             alt="pufferfish"
             id="puffish"
             class="pufpuf"
@@ -87,7 +87,7 @@
 
         <figure id="tuxedo">
           <img
-            src="img/damselFiskTuxedo.gif"
+            src="img/damsel-fisk-tuxedo.gif"
             alt="tuxedo damsel fish"
             id="tuxfish"
             class="tuxie"
@@ -96,7 +96,7 @@
 
         <figure id="blue-pink">
           <img
-            src="img/blaaFisk.gif"
+            src="img/blaa-fisk.gif"
             alt="blue and pink fish"
             id="bpfish"
             class="diskus"
@@ -105,7 +105,7 @@
 
         <figure id="orange-fish">
           <img
-            src="img/orangeFisk.gif"
+            src="img/orange-fisk.gif"
             alt="orange fish"
             id="orange"
             class="orangeFish"
@@ -125,7 +125,7 @@
       <section id="fish2">
         <figure id="pufferfish2">
           <img
-            src="img/pufferFiskLille.gif"
+            src="img/puffer-fisk-lille.gif"
             alt="pufferfish"
             id="puffish2"
             class="pufpuf"
@@ -134,7 +134,7 @@
 
         <figure id="tuxedo2">
           <img
-            src="img/damselFiskTuxedo.gif"
+            src="img/damsel-fisk-tuxedo.gif"
             alt="tuxedo damsel fish"
             id="tuxfish2"
             class="tuxie"
@@ -143,7 +143,7 @@
 
         <figure id="blue-pink2">
           <img
-            src="img/blaaFisk.gif"
+            src="img/blaa-fisk.gif"
             alt="blue and pink fish"
             id="bpfish2"
             class="diskus lefty"
@@ -152,7 +152,7 @@
 
         <figure id="orange-fish2">
           <img
-            src="img/orangeFisk.gif"
+            src="img/orange-fisk.gif"
             alt="orange fish"
             id="orange2"
             class="orangeFish"
@@ -172,7 +172,7 @@
       <section id="fish3">
         <figure id="pufferfish3">
           <img
-            src="img/pufferFiskLille.gif"
+            src="img/puffer-fisk-lille.gif"
             alt="pufferfish"
             id="puffish3"
             class="pufpuf"
@@ -181,7 +181,7 @@
 
         <figure id="tuxedo3">
           <img
-            src="img/damselFiskTuxedo.gif"
+            src="img/damsel-fisk-tuxedo.gif"
             alt="tuxedo damsel fish"
             id="tuxfish3"
             class="tuxie"
@@ -190,7 +190,7 @@
 
         <figure id="blue-pink3">
           <img
-            src="img/blaaFisk.gif"
+            src="img/blaa-fisk.gif"
             alt="blue and pink fish"
             id="bpfish3"
             class="diskus"
@@ -208,7 +208,7 @@
 
         <figure id="orange-fish3">
           <img
-            src="img/orangeFisk.gif"
+            src="img/orange-fisk.gif"
             alt="orange fish"
             id="orange3"
             class="orangeFish"
