--- a/html/game.html
+++ b/html/game.html
@@ -20,7 +20,7 @@
 
       <div class="mascot-intro">
         <img
-          src="../img/nemoFish.png"
+          src="../img/nemo-fish.png"
           alt="Nemo maskot"
           class="intro-mascot"
           id="startMascot"
